[metadata]
name = ephemere
description = Get exoplanet orbit predictions
long_description = file: README.md
author = Thomas Vandal
author_email = thomasvandal@hotmail.com
url = https://github.com/vandalt/ephemere
license = MIT License

[options]
zip_safe = False
packages = find:
dependency_links = git+https://github.com/AntoineDarveau/exofile.git#egg=exofile
install_requires =
    radvel
    astropy
    pandas
    h5py

[options.extras_require]
dev =
    pytest
