[metadata]
name = ephemere
description = Get exoplanet orbit predictions
long_description = file: README.md
author = Thomas Vandal
author_email = thomasvandal@hotmail.com
url = https://github.com/vandalt/ephemere
license = MIT License

[options]
zip_safe = False
packages = find:
install_requires =
    astropy
    pandas
    exofile
    radvel
    h5py

[options.extras_require]
dev =
    pytest
    flake8
    black
    isort

[flake8]
max-line-length = 88
extend-ignore = E203
